# VERA-MH

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  distribute_files.py  generate.py  judge.py  model_config.json  progress_bar.py  pyproject.toml  run_pipeline.py
.claude/: settings.json
.claude/agents/: test-engineer.md
.claude/commands/: README.md  create-commits.md  create-pr.md  create-test.md  create-tests.md  fix-tests.md  format.md  run-generator.md  run-judge.md  setup-dev.md  test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
.pre-commit-scripts/: sync-claude-to-agents.sh
data/: persona_prompt_reminder.txt  persona_prompt_template.txt  personas.tsv  question_prompt.txt  rubric.tsv  rubric_prompt_beginning.txt
docs/: evaluating.MD  evaluating.md  judge.MD  pre-commit-hooks.md  structured-output.md
generate_conversations/: __init__.py  conversation_simulator.py  conversation_turn.py  runner.py  utils.py
human_validation/p_claude_opus_4_1_20250805__a_claude_opus_4_1_20250805__t20__r1__20251124_102205/: 887db5_Maya_claude-opus-4-1-20250805_run1.txt  edd87e_Kevin_claude-opus-4-1-20250805_run1.txt
human_validation/p_claude_opus_4_1_20250805__a_gemini_3_pro_preview__t20__r1__20251124_104125/: 1471b2_Alix_claude-opus-4-1-20250805_run1.txt  402e12_Ray_claude-opus-4-1-20250805_run1.txt  998617_Brian_claude-opus-4-1-20250805_run1.txt  ae9107_Lena_claude-opus-4-1-20250805_run1.txt
human_validation/p_claude_opus_4_1_20250805__a_gpt_4o__t20__r1__20251124_111208/: 0b6d17_Maya_claude-opus-4-1-20250805_run1.txt  14abb2_Brian_claude-opus-4-1-20250805_run1.txt  3dda7f_Lena_claude-opus-4-1-20250805_run1.txt  5ab384_Kevin_claude-opus-4-1-20250805_run1.txt  6ac854_Omar_claude-opus-4-1-20250805_run1.txt  6fea9a_Noah_claude-opus-4-1-20250805_run1.txt  b33109_Kim_claude-opus-4-1-20250805_run1.txt
human_validation/p_claude_opus_4_1_20250805__a_gpt_5_{'max_completion_tokens': 5000}__t20__r1__20251124_111435/: 2bed67_Omar_claude-opus-4-1-20250805_run1.txt
human_validation/p_gemini_3_pro_preview__a_claude_opus_4_1_20250805__t20__r1__20251124_103305/: 18aaa3_Sky_gemini-3-pro-preview_run1.txt  4c3b6a_Alix_gemini-3-pro-preview_run1.txt  6a79b4_Ray_gemini-3-pro-preview_run1.txt  796752_Noah_gemini-3-pro-preview_run1.txt  8652b5_Brian_gemini-3-pro-preview_run1.txt  95653c_Maya_gemini-3-pro-preview_run1.txt  b8f62c_Omar_gemini-3-pro-preview_run1.txt  cbf97a_Lena_gemini-3-pro-preview_run1.txt
human_validation/p_gemini_3_pro_preview__a_gemini_3_pro_preview__t20__r1__20251124_105450/: 3db9d4_Alix_gemini-3-pro-preview_run1.txt  40933e_Sky_gemini-3-pro-preview_run1.txt  74ba43_Brian_gemini-3-pro-preview_run1.txt  d1dc78_Kim_gemini-3-pro-preview_run1.txt
human_validation/p_gemini_3_pro_preview__a_gpt_4o__t20__r1__20251121_142453/: 30da31_Omar_gemini-3-pro-preview_run1.txt  327b24_Noah_gemini-3-pro-preview_run1.txt  79394f_Sky_gemini-3-pro-preview_run1.txt
human_validation/p_gemini_3_pro_preview__a_gpt_5_{'max_completion_tokens': 5000}__t20__r1__20251121_152541/: 410ed6_Kim_gemini-3-pro-preview_run1.txt  4ab1be_Sky_gemini-3-pro-preview_run1.txt  8ab078_Ray_gemini-3-pro-preview_run1.txt  c67af7_Alix_gemini-3-pro-preview_run1.txt  e25a59_Omar_gemini-3-pro-preview_run1.txt
human_validation/p_gpt_5_{'max_completion_tokens': 5000}__a_claude_opus_4_1_20250805__t20__r1__20251124_102620/: 1ee0ab_Lena_g5_run1.txt  25bcab_Sky_g5_run1.txt  a2e5d7_Kim_g5_run1.txt  e637fd_Brian_g5_run1.txt
human_validation/p_gpt_5_{'max_completion_tokens': 5000}__a_gemini_3_pro_preview__t20__r1__20251124_104630/: 2cbc0a_Brian_g5_run1.txt  5ee7e3_Sky_g5_run1.txt  d7de63_Kevin_g5_run1.txt  ec23a0_Kim_g5_run1.txt
human_validation/p_gpt_5_{'max_completion_tokens': 5000}__a_gpt_4o__t20__r1__20251121_141815/: 583a6a_Lena_g5_run1.txt  afaec2_Omar_g5_run1.txt  bb3baa_Noah_g5_run1.txt
human_validation/p_gpt_5_{'max_completion_tokens': 5000}__a_gpt_5_{'max_completion_tokens': 5000}__t20__r1__20251121_150907/: 0ecfd9_Noah_g5_run1.txt  37a352_Omar_g5_run1.txt  d64096_Kim_g5_run1.txt
judge/: __init__.py  constants.py  file_cache.py  llm_judge.py  question_navigator.py  response_models.py  rubric_config.py  runner.py  score.py  score_comparison.py  score_utils.py  score_viz.py  utils.py
llm_clients/: __init__.py  azure_llm.py  claude_llm.py  config.py  endpoint_llm.py  gemini_llm.py  litellm_llm.py  llama_llm.py  llm_factory.py  llm_interface.py  ollama_llm.py  openai_llm.py
publication_data/concept_paper/: README.md
publication_data/human_validation/: README.md
score_comparisons/: evaluations_to_compare_vera_mh_v1_scores.csv  evaluations_to_compare_vera_mh_v1_scores_output_20260203_144656.csv  evaluations_to_compare_vera_mh_v1_scores_output_20260203_144656_detailed.csv
scripts/: pool_vera_scores.py  run_combinations.sh  run_recommended_vera_pipeline.sh  score_publication_evaluations.sh
test/code/: test_async_cache.py
tests/: conftest.py  test_question_navigator.py
tests/fixtures/: evaluation_empty.tsv  evaluation_malformed.tsv  evaluation_sample1.tsv  evaluation_sample2.tsv  personas_minimal.tsv  personas_with_risk.tsv  question_prompt.txt  rubric_assign_end.tsv  rubric_circular.tsv  rubric_default_no.tsv  rubric_default_yes.tsv  rubric_early_stop.tsv  (+11 more)
utils/: __init__.py  conversation_layout.py  conversation_utils.py  debug.py  logging_utils.py  model_config_loader.py  naming.py  utils.py
(+232 files in other folders)
